--- a/git-github.ipynb
+++ b/git-github.ipynb
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -299,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -311,41 +311,26 @@
      "output_type": "stream",
      "text": [
       "On branch master\r\n",
-      "Your branch is up-to-date with 'origin/master'.\r\n",
+      "\r\n",
+      "Initial commit\r\n",
+      "\r\n",
       "Changes to be committed:\r\n",
-      "  (use \"git reset HEAD <file>...\" to unstage)\r\n",
+      "  (use \"git rm --cached <file>...\" to unstage)\r\n",
       "\r\n",
       "\t\u001b[32mnew file:   .gitignore\u001b[m\r\n",
+      "\t\u001b[32mnew file:   Lesson3.ipynb\u001b[m\r\n",
+      "\t\u001b[32mnew file:   downloader.ipynb\u001b[m\r\n",
       "\t\u001b[32mnew file:   git-github.ipynb\u001b[m\r\n",
+      "\t\u001b[32mnew file:   lesson1.ipynb\u001b[m\r\n",
       "\t\u001b[32mnew file:   lesson1.py\u001b[m\r\n",
-      "\t\u001b[32mnew file:   lesson11.py\u001b[m\r\n",
       "\t\u001b[32mnew file:   lesson4.ipynb\u001b[m\r\n",
-      "\t\u001b[32mnew file:   lesson_4.ipynb\u001b[m\r\n",
-      "\t\u001b[32mdeleted:    numpy.ipynb\u001b[m\r\n",
-      "\t\u001b[32mnew file:   tumo-tf/Lecture-4-Matplotlib.ipynb\u001b[m\r\n",
-      "\t\u001b[32mmodified:   tumo-tf/downloader.ipynb\u001b[m\r\n",
-      "\t\u001b[32mdeleted:    tumo-tf/git-github.ipynb\u001b[m\r\n",
-      "\t\u001b[32mmodified:   tumo-tf/lamdba_function.ipynb\u001b[m\r\n",
-      "\t\u001b[32mmodified:   tumo-tf/magic_commands.ipynb\u001b[m\r\n",
-      "\t\u001b[32mmodified:   tumo-tf/markdown.ipynb\u001b[m\r\n",
-      "\t\u001b[32mmodified:   tumo-tf/matplotlib_library.ipynb\u001b[m\r\n",
-      "\t\u001b[32mnew file:   tumo-tf/numpy-tutorial-solved.ipynb\u001b[m\r\n",
-      "\t\u001b[32mnew file:   tumo-tf/numpy.ipynb\u001b[m\r\n",
-      "\r\n",
-      "Changes not staged for commit:\r\n",
-      "  (use \"git add <file>...\" to update what will be committed)\r\n",
-      "  (use \"git checkout -- <file>...\" to discard changes in working directory)\r\n",
-      "\r\n",
-      "\t\u001b[31mmodified:   git-github.ipynb\u001b[m\r\n",
+      "\t\u001b[32mnew file:   lesson5.ipynb\u001b[m\r\n",
       "\r\n",
       "Untracked files:\r\n",
       "  (use \"git add <file>...\" to include in what will be committed)\r\n",
       "\r\n",
       "\t\u001b[31mdata.txt\u001b[m\r\n",
-      "\t\u001b[31mromeo.txt\u001b[m\r\n",
-      "\t\u001b[31mscientific-python-lectures/\u001b[m\r\n",
       "\t\u001b[31mtest.txt\u001b[m\r\n",
-      "\t\u001b[31mtumo-tf/lesson_git/assets/\u001b[m\r\n",
       "\r\n"
      ]
     }
@@ -377,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -388,19 +373,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[master c4de546] first commit\r\n",
-      " 16 files changed, 15204 insertions(+), 715 deletions(-)\r\n",
+      "[master (root-commit) c9af810] first commit\r\n",
+      " 8 files changed, 3519 insertions(+)\r\n",
       " create mode 100644 .gitignore\r\n",
+      " create mode 100644 Lesson3.ipynb\r\n",
+      " create mode 100644 downloader.ipynb\r\n",
       " create mode 100644 git-github.ipynb\r\n",
+      " create mode 100644 lesson1.ipynb\r\n",
       " create mode 100644 lesson1.py\r\n",
-      " create mode 100644 lesson11.py\r\n",
       " create mode 100644 lesson4.ipynb\r\n",
-      " create mode 100644 lesson_4.ipynb\r\n",
-      " delete mode 100644 numpy.ipynb\r\n",
-      " create mode 100644 tumo-tf/Lecture-4-Matplotlib.ipynb\r\n",
-      " delete mode 100644 tumo-tf/git-github.ipynb\r\n",
-      " create mode 100644 tumo-tf/numpy-tutorial-solved.ipynb\r\n",
-      " create mode 100644 tumo-tf/numpy.ipynb\r\n"
+      " create mode 100644 lesson5.ipynb\r\n"
      ]
     }
    ],
@@ -420,15 +402,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "deletable": true,
     "editable": true
    },
    "outputs": [],
    "source": [
-    "!git remote add origin https://github.com/your-github-username/tumo-tf.git"
+    "!git remote add origin https://github.com/Yana10/tumo-tf.git"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "origin\thttps://github.com/Yana10/tumo-tf.git (fetch)\r\n",
+      "origin\thttps://github.com/Yana10/tumo-tf.git (push)\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!git remote -v"
    ]
   },
   {
